Add Watched Movies fetures

--- a/src/component/leftSide/Movie.css
+++ b/src/component/leftSide/Movie.css
@@ -3,7 +3,7 @@
     gap: 10px;
     height: 100px;
     cursor: pointer;
-    /* padding: 20px; */
+    padding: 20px;
 }
 .movie-container:hover{
     background-color: #252D31;
@@ -11,4 +11,7 @@
 .movie-container img{
     width: 40px;
     height: 60px;
+}
+.movie-inside span{
+    color: red;
 }
